fix: fix chips
