# src/features/tables/table.types.ts
@@ -1,14 +1,33 @@
 export interface ChipAppearance {
   id: string
   name: string
+  value: number
   picture: string
-  color: string
 }
 
 export interface SelectedChip {
-  appearanceId: string
-  appearance: ChipAppearance
+  chipId: string
+  chip: ChipAppearance
+}
+
+export interface BuyInRequest {
+  destinationUserId: string
+  chipId: string
+  chipCount: number
+}
+
+export interface UserStackChipResponse {
+  chipId: string
+  name: string
+  picture: string
   value: number
+  count: number
+}
+
+export interface UserStackResponse {
+  userId: string
+  totalValue: number
+  chips: UserStackChipResponse[]
 }
 
 export interface CreateTableForm {
@@ -45,5 +64,6 @@ export interface TableSeatInfo {
 export interface TableInfoResponse {
   id: string
   name: string
+  managerId?: string
   seats: TableSeatInfo[]
 }
